--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "mongoose": "^8.6.2",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.1.4"
   }
 }
